<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.sqsmv.sqsscanner.SocketMobilePairActivity"
    android:orientation="vertical" >


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/listMar"
        android:layout_marginRight="@dimen/listMar"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/trouble"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/troubleShooting"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TextView
            android:id="@+id/ts1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/listMar"
            android:text="@string/tsText"
            android:textAppearance="?android:attr/textAppearanceSmall" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/listMar"
        android:layout_marginRight="@dimen/listMar"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/pairHeader"
            android:textAppearance="?android:attr/textAppearanceLarge"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pairInstruction1"
            android:textAppearance="?android:attr/textAppearanceSmall"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pairInstruction2"
            android:textAppearance="?android:attr/textAppearanceSmall"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="SPP"
                android:layout_marginRight="10dp"
                android:textAppearance="?android:attr/textAppearanceMedium"/>

            <com.sqsmv.sqsscanner.BarcodeView
                android:id="@+id/SPPBarcodeView"
                android:layout_width="wrap_content"
                android:layout_height="105px" />

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pairInstruction3"
            android:textAppearance="?android:attr/textAppearanceSmall"/>

        <com.sqsmv.sqsscanner.BarcodeView
            android:id="@+id/BTAddrBarcodeView"
            android:layout_width="wrap_content"
            android:layout_height="105px" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pairInstruction4"
            android:textAppearance="?android:attr/textAppearanceSmall"/>

    </LinearLayout>
</LinearLayout>
