<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PullReview"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/pullHeadBack"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:contentDescription="back"
            android:padding="@dimen/listMar"
            android:src="@drawable/ic_arrow_circle_left"/>

        <Button
            android:id="@+id/massDelete"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/massDelete"/>

        <Button
            android:id="@+id/commitScan"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/commitScan"/>
    </LinearLayout>

    <TextView
        android:id="@+id/commitMode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/listMar"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/headPullNum"
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:clickable="true"
            android:gravity="left"
            android:padding="@dimen/radTopMar"
            android:text="@string/pull_num_header"
            android:textAppearance="?android:attr/textAppearanceMedium"/>

        <TextView
            android:id="@+id/headPullLines"
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:clickable="true"
            android:gravity="center"
            android:padding="@dimen/radTopMar"
            android:text="@string/pull_lines_header"
            android:textAppearance="?android:attr/textAppearanceMedium"/>

        <TextView
            android:id="@+id/headPullCount"
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:clickable="true"
            android:gravity="right"
            android:padding="@dimen/radTopMar"
            android:text="@string/pull_count_header"
            android:textAppearance="?android:attr/textAppearanceMedium"/>
    </LinearLayout>

    <ListView
        android:id="@+id/pullListView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>
</LinearLayout>

