<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" 
    android:descendantFocusability="blocksDescendants">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <ImageButton
            android:id="@+id/scanHeadBack"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:contentDescription="back"
            android:padding="@dimen/listMar"
            android:onClick="onClickBack"
            android:src="@android:drawable/ic_menu_revert" />

        <TextView
            android:id="@+id/headScanPull"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:clickable="true"
            android:padding="@dimen/listMar"
            android:text="@string/pull_lbl"
            android:textAppearance="?android:attr/textAppearanceMedium" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/headScanId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:clickable="true"
            android:padding="@dimen/radTopMar"
            android:text="@string/scan_id_header"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/headScanQty"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:clickable="true"
            android:padding="@dimen/radTopMar"
            android:text="@string/scan_qty_header"
            android:textAppearance="?android:attr/textAppearanceMedium" />
    </LinearLayout>
    
</LinearLayout>
