<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/listMar"
    android:paddingRight="@dimen/listMar"
    android:orientation="vertical"
    tools:context=".AdminActivity" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:orientation="vertical" >

        <ImageButton
            android:id="@+id/adminHeadBack"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@android:drawable/ic_menu_revert"
            android:contentDescription="@string/backButton" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/btnForceAppUpdate"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".5"
                android:text="Force App Update"/>

            <Button
                android:id="@+id/btnForceUpdate"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".5"
                android:text="Force DB Update"/>

        </LinearLayout>

        <Button
            android:id="@+id/ResetDB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:text="Reset Database"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/headBackupName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".5"
            android:clickable="true"
            android:text="@string/file"
            android:gravity="left"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/headBackupDate"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".3"
            android:clickable="true"
            android:text="@string/date"
            android:gravity="right"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/headBackupSize"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".2"
            android:clickable="true"
            android:text="@string/size"
            android:gravity="right"
            android:textAppearance="?android:attr/textAppearanceMedium" />
    </LinearLayout>

    <ListView
        android:id="@+id/fileListView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>
</LinearLayout>