<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/listMar"
    android:paddingRight="@dimen/listMar"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:orientation="vertical" >

        <ImageButton
            android:id="@+id/adminHeadBack"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onClickBack"
            android:src="@android:drawable/ic_menu_revert"
            android:contentDescription="@string/backButton" />

        <Button
            android:id="@+id/btnForceUpdate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Force DB Update" 
            android:onClick="onClickUpdate"/>

        <Button
            android:id="@+id/ResetDB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:text="Reset Database"
            android:onClick="onClickResetDB"/>
        <!--
        <TextView
            android:id="@+id/exportLbl"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="@dimen/listMar"
            android:text="@string/exportLbl"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <RadioGroup
            android:id="@+id/exportGrp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:padding="@dimen/listMar" >

            <RadioButton
                android:id="@+id/SD"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/sdCard" />

            <RadioButton
                android:id="@+id/DBX"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dbx" />
        </RadioGroup>
        -->
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
         >

        <TextView
            android:id="@+id/headBackupName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".5"
            android:clickable="true"
            android:onClick="onClickSort"
            android:text="@string/file"
            android:gravity="left"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/headBackupDate"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".3"
            android:clickable="true"
            android:onClick="onClickSort"
            android:text="@string/date"
            android:gravity="right"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/headBackupSize"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".2"
            android:clickable="true"
            android:onClick="onClickSort"
            android:text="@string/size"
            android:gravity="right"
            android:textAppearance="?android:attr/textAppearanceMedium" />
    </LinearLayout>

</LinearLayout>